# MITHRA

./: .gitignore  LICENSE.txt  README.md  convert_tracks.ipynb  demo.ipynb  pyproject.toml  read_btsettl.ipynb  scrape.ipynb  test.ipynb  tutorial.ipynb
.github/workflows/: ci.yml  install.yml  linter.yml  test.yml
MITHRA/: __init__.py  install.py  plot.py  spec.py  tracks.py  utils.py
data/: .gitignore  data_readme.txt
notebooks/: tutorial.ipynb
src/: plot.py  spec.py  spectrum.py  track.py  tracks.py  utils.py
src/mithra/: __init__.py  solar.tsv  spec.py  tracks.py  utils.py
