[tool.poetry]
name = "MITHRA"
version = "0.1.0"
description = "A wrapper for stellar evolution models and tracks."
authors = ["Harrison Nicholls <harrison.nicholls@physics.ox.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
xarray = "^2024.5.0"
scipy = "^1.13.0"
requests = "^2.32.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.poetry.scripts]
my-script = "MITHRA.install:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

