[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mithra"
version = "0.1.0"
description = "A wrapper for stellar evolution models and tracks."
authors = [{name = "Harrison Nicholls", email = "harrison.nicholls@physics.ox.ac.uk"}]
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    ]
dependencies = [
    "flit_core >=3.9.0",
    "requests",
    "docutils",
    "tomli-w",
    "pip",
    "numpy",
    "xarray",
    "scipy",
    "osfclient"
]
requires-python = ">=3.11"


[project.urls]
Home = "https://github.com/nichollsh/MITHRA"


